Fixed unreadable tutorial links

--- a/src/app/components/teaching-list/teaching-list.component.scss
+++ b/src/app/components/teaching-list/teaching-list.component.scss
@@ -15,6 +15,7 @@
 
   @media screen and (max-width: 900px) {
     width: 80%;
+    height: auto;
   }
 
   @media screen and (max-width: 400px) {
@@ -96,7 +97,7 @@ a {
   padding-bottom: 15px;
 
   @media screen and (max-width: 900px) {
-    font-size: 24px;
+    font-size: 22px;
   }
 
   @media screen and (max-width: 400px) {
